<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/small_padding">

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_client"
                android:inputType="textAutoComplete"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estate"
                android:textSize="18sp" />
            <Spinner android:id="@+id/estate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:minHeight="@dimen/button_height"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_phone_number"
                android:textSize="18sp"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="9"/>
        </LinearLayout>

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_up_date"
                android:textSize="18sp" />
            <CalendarView
                android:id="@+id/pick_up_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"/>
        </LinearLayout>

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_up_date"
                android:textSize="18sp" />
            <TimePicker
                android:id="@+id/pick_up_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"/>
        </LinearLayout>

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_margin="@dimen/small_padding"
                android:textSize="18sp" />
            <RelativeLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_padding">

                <EditText android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/hint_price"
                    android:inputType="numberDecimal"
                    android:textSize="18sp"
                    android:minHeight="@dimen/min_height"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/price"
                    android:minHeight="@dimen/min_height"
                    android:src="@drawable/baseline_euro_24"/>
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_save"
            android:layout_margin="@dimen/big_padding"
            android:minHeight="@dimen/button_height"
            android:textColor="@color/buttonLabel"/>

    </LinearLayout>
</ScrollView>